--- a/oopp4/oopp4.vcxproj.filters
+++ b/oopp4/oopp4.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="oopp4.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Set.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Set.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
