--- a/oopp5/oopp5.vcxproj
+++ b/oopp5/oopp5.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -140,6 +140,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="oopp5.cpp" />
+    <ClCompile Include="VendingController.cpp" />
+    <ClCompile Include="VendingMachine.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="VendingController.h" />
+    <ClInclude Include="VendingMachine.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
