--- a/oopp11/oopp11.vcxproj
+++ b/oopp11/oopp11.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -139,11 +139,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="MultipleChoice.cpp" />
     <ClCompile Include="MyVector.cpp" />
     <ClCompile Include="oopp11.cpp" />
+    <ClCompile Include="Question.cpp" />
+    <ClCompile Include="YesNoQuestion.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="MultipleChoice.h" />
     <ClInclude Include="MyVector.h" />
+    <ClInclude Include="Question.h" />
+    <ClInclude Include="YesNoQuestion.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
