--- a/oopp12/oopp12.vcxproj
+++ b/oopp12/oopp12.vcxproj
@@ -140,9 +140,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="oopp12.cpp" />
+    <ClCompile Include="PremiumUser.cpp" />
+    <ClCompile Include="System.cpp" />
     <ClCompile Include="User.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="PremiumUser.h" />
+    <ClInclude Include="System.h" />
     <ClInclude Include="User.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
